Fixed icon spacing issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
   list-style-type: none;
   margin-top: 0;
   margin-bottom: 0;
-  padding-right: 10px;
+  padding-right: 3px;
   font-size: 1.2em;
 }
 
